--- a/src/partials/analytics.html
+++ b/src/partials/analytics.html
@@ -1,1 +1,10 @@
 <!-- There should be your analytics script -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GD59YL4PTV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GD59YL4PTV');
+</script>
